--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "hb-cli": "bin/index.js"
   },
   "scripts": {
-    "publish": "npm publish --access public",
+    "push": "npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "adtkcn",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "dayjs": "^1.11.1",
+    "form-data": "^4.0.0",
     "iconv-lite": "^0.6.3",
     "inquirer": "^8.2.2",
     "json5": "^2.2.1",
@@ -24,7 +26,6 @@
   "directories": {
     "doc": "doc"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adtkcn/hb-cli.git"
