--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adtkcn/hb-cli",
-  "version": "1.0.3",
-  "description": "用于uniapp的打包工具，可切换环境变量，切换证书，更改版本，wifi调试",
+  "version": "1.0.4",
+  "description": "用于uniapp的打包工具，可切换环境变量、可多配置，切换证书，更改版本，wifi调试",
   "main": "./bin/index.js",
   "bin": {
     "hb-cli": "bin/index.js"
