--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adtkcn/hb-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "用于uniapp的打包工具，可切换环境变量、可多配置，切换证书，更改版本，wifi调试",
   "main": "./bin/index.js",
   "bin": {
@@ -41,5 +41,10 @@
   "bugs": {
     "url": "https://github.com/adtkcn/hb-cli/issues"
   },
-  "homepage": "https://github.com/adtkcn/hb-cli#readme"
+  "homepage": "https://github.com/adtkcn/hb-cli#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0"
+  }
 }
