--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adtkcn/hb-cli",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "description": "用于uniapp的打包工具，可切换环境变量、可多配置，切换证书，更改版本，wifi调试",
   "main": "./bin/index.js",
   "bin": {
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "commander": "^13.1.0",
     "dayjs": "^1.11.1",
     "form-data": "^4.0.0",
     "iconv-lite": "^0.6.3",
