--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@adtkcn/hb-cli",
   "version": "2.0.0",
   "description": "用于uniapp的打包工具，可切换环境变量、可多配置，切换证书，更改版本，wifi调试",
-  "main": "./bin/index.js",
+  "main": "./index.js",
   "bin": {
     "hb-cli": "bin/index.js"
   },
